# exitcode

./: README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: linters.yml  python-publish.yml
exitcode/: __init__.py
